// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaperItem Component when paper data doesn't have DOI should render correctly 1`] = `
<div
  className="paperItemWrapper"
>
  <div
    className="contentSection"
  >
    <div>
      <a
        className="title"
        href="/papers/101"
        onClick={[Function]}
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "Preparation and characterization of graphene oxide paper.",
            }
          }
        />
      </a>
      <a
        className="newTabIconWrapper"
        href="/papers/101"
        onClick={[Function]}
        rel="noopener"
        target="_blank"
      >
        <i
          className="icon newTabIcon"
        />
      </a>
    </div>
    <div
      className="publishInfoList"
    >
      <div
        className="journal"
      >
        <i
          className="icon"
        />
        <div
          className="journalText"
        >
          <span
            className="bold"
          >
            2007
             in 
          </span>
          <a
            className="journalName"
            href="/journals/10"
            onClick={[Function]}
          >
            Nature
          </a>
          <span
            className="bold"
          >
             [IF: 40.14]
          </span>
        </div>
      </div>
      <div
        className="author"
      >
        <i
          className="icon"
        />
        <span
          className="authors"
        >
          <span
            className="author"
          >
            <a
              className="authorName"
              href="/authors/undefined"
              onClick={[Function]}
            >
              Dmitriy A. Dikin
            </a>
             (Northwestern University)
            <span>
              , 
            </span>
          </span>
          <span
            className="author"
          >
            <a
              className="authorName"
              href="/authors/undefined"
              onClick={[Function]}
            >
              Sasha Stankovich
            </a>
             (Northwestern University)
            <span>
              , 
            </span>
          </span>
          <span
            className="author"
          >
            <a
              className="authorName"
              href="/authors/undefined"
              onClick={[Function]}
            >
              Eric J. Zimney
            </a>
             (Northwestern University)
          </span>
          <span
            className="toggleAuthorsButton"
            onClick={[Function]}
          >
            ... more
          </span>
        </span>
      </div>
    </div>
    <span
      className="abstract"
      style={Object {}}
    >
      <span>
        Paper- or foil-like materials are used in many technological applications, as protective layers, chemical filters and adhesives, for instance. So-called 'bucky' paper, based on carbon nanotubes, has the potential to extend the use of high-tech papers to applications such as fuel cells, as it has good mechanical and electrical properties. Now a new carbon nanocomposite paper-like material has been prepared that promises superior performance in stiffness, strength and flexibility: graphene oxide p...
      </span>
      <label
        className="moreOrLess"
        onClick={[Function]}
      >
        <span>
          more
        </span>
      </label>
    </span>
    <div
      className="infoList"
    >
      <a
        className="referenceButton"
        href="/papers/101#references"
        onClick={[Function]}
      >
        <span>
          Ref 23
        </span>
      </a>
      <a
        className="citedButton"
        href="/papers/101#cited"
        onClick={[Function]}
      >
        <span>
          Cited 2909
        </span>
      </a>
      <div
        className="sourceButton"
        onClick={[Function]}
      >
        <i
          className="icon pdfIconWrapper"
        />
        <span>
          Download PDF
        </span>
      </div>
      <button
        className="addCollectionBtnWrapper"
        onClick={[Function]}
      >
        <i
          className="icon plusIcon"
        />
        <span>
          Add To Collection
        </span>
      </button>
      <div
        className="claimButton"
      >
        <div>
          <button
            className="MuiButtonBase-root-7 MuiIconButton-root-1 additionalMenuIcon"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-6"
            >
              <i
                className="icon ellipsisIcon"
              />
            </span>
            <span
              className="MuiTouchRipple-root-10"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaperItem Component when paper data has DOI should render correctly 1`] = `
<div
  className="paperItemWrapper"
>
  <div
    className="contentSection"
  >
    <div>
      <a
        className="title"
        href="/papers/101"
        onClick={[Function]}
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "Preparation and characterization of graphene oxide paper.",
            }
          }
        />
      </a>
      <a
        className="newTabIconWrapper"
        href="/papers/101"
        onClick={[Function]}
        rel="noopener"
        target="_blank"
      >
        <i
          className="icon newTabIcon"
        />
      </a>
    </div>
    <div
      className="publishInfoList"
    >
      <div
        className="journal"
      >
        <i
          className="icon"
        />
        <div
          className="journalText"
        >
          <span
            className="bold"
          >
            2007
             in 
          </span>
          <a
            className="journalName"
            href="/journals/10"
            onClick={[Function]}
          >
            Nature
          </a>
          <span
            className="bold"
          >
             [IF: 40.14]
          </span>
        </div>
      </div>
      <div
        className="author"
      >
        <i
          className="icon"
        />
        <span
          className="authors"
        >
          <span
            className="author"
          >
            <a
              className="authorName"
              href="/authors/undefined"
              onClick={[Function]}
            >
              Dmitriy A. Dikin
            </a>
             (Northwestern University)
            <span>
              , 
            </span>
          </span>
          <span
            className="author"
          >
            <a
              className="authorName"
              href="/authors/undefined"
              onClick={[Function]}
            >
              Sasha Stankovich
            </a>
             (Northwestern University)
            <span>
              , 
            </span>
          </span>
          <span
            className="author"
          >
            <a
              className="authorName"
              href="/authors/undefined"
              onClick={[Function]}
            >
              Eric J. Zimney
            </a>
             (Northwestern University)
          </span>
          <span
            className="toggleAuthorsButton"
            onClick={[Function]}
          >
            ... more
          </span>
        </span>
      </div>
    </div>
    <span
      className="abstract"
      style={Object {}}
    >
      <span>
        Paper- or foil-like materials are used in many technological applications, as protective layers, chemical filters and adhesives, for instance. So-called 'bucky' paper, based on carbon nanotubes, has the potential to extend the use of high-tech papers to applications such as fuel cells, as it has good mechanical and electrical properties. Now a new carbon nanocomposite paper-like material has been prepared that promises superior performance in stiffness, strength and flexibility: graphene oxide p...
      </span>
      <label
        className="moreOrLess"
        onClick={[Function]}
      >
        <span>
          more
        </span>
      </label>
    </span>
    <div
      className="infoList"
    >
      <a
        className="referenceButton"
        href="/papers/101#references"
        onClick={[Function]}
      >
        <span>
          Ref 23
        </span>
      </a>
      <a
        className="citedButton"
        href="/papers/101#cited"
        onClick={[Function]}
      >
        <span>
          Cited 2909
        </span>
      </a>
      <div
        className="sourceButton"
        onClick={[Function]}
      >
        <i
          className="icon pdfIconWrapper"
        />
        <span>
          Download PDF
        </span>
      </div>
      <span
        className="DOIMetaButtonsWrapper"
      >
        <span
          className="citationIconWrapper"
          onClick={[Function]}
        >
          <i
            className="icon citationIcon"
          />
          <span>
            Cite this paper
          </span>
        </span>
      </span>
      <button
        className="addCollectionBtnWrapper"
        onClick={[Function]}
      >
        <i
          className="icon plusIcon"
        />
        <span>
          Add To Collection
        </span>
      </button>
      <div
        className="claimButton"
      >
        <div>
          <button
            className="MuiButtonBase-root-7 MuiIconButton-root-1 additionalMenuIcon"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-6"
            >
              <i
                className="icon ellipsisIcon"
              />
            </span>
            <span
              className="MuiTouchRipple-root-10"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
